--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.protobuf'
+
 
 android {
     compileSdkVersion 31
@@ -20,11 +22,59 @@ android {
     }
     kotlinOptions { jvmTarget = "1.8" }
     buildFeatures { viewBinding = true }
+    sourceSets {
+        main {
+            java {
+                srcDir 'src/main/java'
+                srcDir 'src/main/proto'
+            }
+            proto {
+                srcDir 'src/main/proto'
+            }
+        }
+    }
+    sourceSets {
+        main {
+            java {
+                srcDirs 'build/generated/source/proto/main/grpc'
+                srcDirs 'build/generated/source/proto/main/java'
+            }
+        }
+    }
 }
 
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.0.0'
+    }
+    plugins {
+        javalite {
+            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                remove java
+            }
+            task.plugins {
+                javalite { }
+            }
+        }
+    }
+}
+/*sourceSets {
+    main {
+        java {
+            srcDirs +=
+                    file("${protobuf.generatedFilesBaseDir}/main/javalite")
+        }
+    }
+}*/
 dependencies {
     implementation project(":data")
     implementation project(":domain")
+    implementation 'com.google.protobuf:protobuf-lite:3.0.1'
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.7"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
